--- a/conda.recipe/meta.yaml
+++ b/conda.recipe/meta.yaml
@@ -2,6 +2,11 @@ package:
   name: pill
   version: "0.3.0"
 
+build:
+  always_include_files:
+    - bin/pill              [unix]
+    - Scripts/pill.bat      [win]
+
 source:
   path: ../
 
